    - MFT optimization was forced to do nothing silently on non-NTFS disks
    - Windows NT 4.0 and Windows 2000 support was dropped because of
      weakness of the Windows Defrag API on these systems;
      for these people who still use old Windows editions
      we recommend to use the 5.0.x series of UltraDefrag
    - low color depth (8 bits per pixel) support was dropped for GUI toolbar
    - Internals: flags field removed from winx_file_disposition structure
    - MS Visual Studio 6.0 development environment support dropped
    - many zenwinx prototypes changed by replacing short keyword by wchar_t
    - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
      removed from wgx library


  Version 5.0.2  2012-01-
  ------------------------------------------------------------------------------
    - one little bug in MFT Zone redraw was fixed
    - Installer: forced default action for .luar files to be "view"
    - the following translations were added:

      Bosanski

    - the following translations were updated:

      Dutch

    - some additions to the intro section of the documentation


  Version 5.0.1  2012-01-08
  ------------------------------------------------------------------------------
    - few important bugs in disk processing routines were fixed
    - few bugs in MFT optimizer were fixed
    - one bug causing boot time interface freeze 
      after "Good bye..." message was fixed
    - the following translations were updated:

      Finnish, Indonesian, Italian

    - some additions to the tips, FAQ and GUI sections of the documentation


  Version 5.0.0  2011-12-31
  ------------------------------------------------------------------------------
    - the following translations were added:

      Kapampangan, Georgian

    - the following translations were updated:

      Italian, Polish, Swedish, Burmese (Padauk), Finnish, Japanese

    RC2:
    - ability to defragment NTFS attribute lists was added